cambio de texto eventos

--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -99,7 +99,7 @@
 			</div>
 
 
-			<h2 class="section-title" style="margin-top: 2rem;">Próximos Eventos</h2>
+			<h2 class="section-title" style="margin-top: 2rem;">Eventos</h2>
 			@if (Model.Project.EventsProject != null && Model.Project.EventsProject.Any())
 			{
 				foreach (var evento in Model.Project.EventsProject)
