--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -233,8 +233,10 @@ footer a:hover {
     gap: 2rem;
     width: 100%;
     max-width: 100vw;
+    height: 100vh;
     box-sizing: border-box;
     overflow-x: hidden;
+    align-items: start;
 }
 
 /* Etiquetas de generos musicales */
