--- a/LocalVibes/wwwroot/css/Views/Profile/Project.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Project.css
@@ -1,11 +1,34 @@
+body{
+    overflow: hidden;
+}
+
 /* Miembros de la banda */
 .band-content {
     background-color: #444;
     padding: 2rem;
     border-radius: 8px;
     max-width: 100%;
+    max-height: 90%;
     display: inline-block;
+    overflow-y: auto;
 }
+
+    .band-content::-webkit-scrollbar {
+        width: 10px; /* Grosor */
+    }
+
+    .band-content::-webkit-scrollbar-track {
+        background: transparent; /* Fondo transparente */
+    }
+
+    .band-content::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 255, 255, 0.2); /* Color tenue */
+        border-radius: 10px;
+    }
+
+        .band-content::-webkit-scrollbar-thumb:hover {
+            background-color: rgba(255, 255, 255, 0.4); /* Hover más visible */
+        }
 
 .toggle-button {
     background: none;
