--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -235,7 +235,7 @@ footer a:hover {
     max-width: 100vw;
     height: 100vh;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow: hidden;
     align-items: start;
 }
 
