--- a/LocalVibes/wwwroot/css/Views/Profile/Event.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Event.css
@@ -89,12 +89,14 @@
 }
 
 .date-badge {
-    background-color: #800080;
+    background-color: var(--primary-color);
     color: white;
     padding: 0.5rem 1rem;
-    border-radius: 4px;
+    border-radius: var(--border-radius);
     display: inline-block;
     margin-bottom: 1rem;
+    font-weight: bold;
+    font-size: larger;
 }
 
 @media (max-width: 768px) {
