--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -101,7 +101,18 @@
 			</div>
 
 
-			<h2 class="section-title" style="margin-top: 2rem;">Eventos</h2>
+
+			<h2 class="section-title" style="margin-top: 2rem; display: flex; align-items: center; gap: 1rem;">
+				Eventos
+				@if (Context.Session.GetString("UserId") != null && int.Parse(Context.Session.GetString("UserId")) == Model.Project.IdUsersAdmin)
+				{
+					<button id="newEventButton" class="btn-new-event" type="button">
+						<span class="btn-plus">+</span>
+						<span class="btn-text">Nuevo Evento</span>
+					</button>
+				}
+			</h2>
+			
 			@if (Model.Project.EventsProject != null && Model.Project.EventsProject.Any())
 			{
 				foreach (var evento in Model.Project.EventsProject)
@@ -122,83 +133,7 @@
 				<p>No hay eventos disponibles.</p>
 			}
 
-			@if (sessionUserId == Model.Project.IdUsersAdmin){
-				<!-- Modal para crear un nuevo evento -->
-				<div id="eventModal" style="display: none;" class="modal">
-					<div class="modal-content">
-						<span class="close" onclick="closeEventModal()">×</span>
-						<h2>Crear Nuevo Evento</h2>
-						<form method="post" action="/Profile/CreateEvent">
-							<label for="eventTitle">Título del Evento:</label>
-							<input type="text" id="eventTitle" name="eventTitle" required>
-							<br />
-							<label for="eventDescription">Descripción:</label>
-							<textarea id="eventDescription" name="eventDescription" required></textarea>
-							<br />
-							<label for="eventDate">Fecha del Evento:</label>
-							<input type="date" id="eventDate" name="eventDate" required>
-							<br />
-							<label for="eventCapacity">Capacidad:</label>
-							<input type="number" id="eventCapacity" name="eventCapacity">
-							<br />
-							<!-- Ubicación -->
-							<label for="locationId">Ubicación del Evento:</label>
-							<select id="locationId" name="locationId" required>
-								<option value="">Selecciona una ubicación</option>
-								@if (Model.Locations != null && Model.Locations.Any())
-								{
-									foreach (var location in Model.Locations)
-									{
-										<option value="@location.IdLocation">@location.NameLocation</option>
-									}
-								}
-								else
-								{
-									<p>No hay ubicaciones disponibles.</p>
-								}
-							</select>
-							<br />
-							<button type="submit" class="btn btn-outline-light btn-sm" style="background-color: var(--primary-color) !important; width: 150px !important;">
-								Crear Evento
-							</button>
-						</form>
-					</div>
-				</div>
-				<br />
-				<!-- Botón para abrir el modal -->
-				@if (Context.Session.GetString("UserId") != null && int.Parse(Context.Session.GetString("UserId")) == Model.Project.IdUsersAdmin)
-				{
-					<button id="newEventButton" class="btn btn-outline-light btn-sm" type="button" >
-						Nuevo Evento
-					</button>
-				}
-				<script>
-					// Obtener el modal
-					var modal = document.getElementById("eventModal");
-					// Obtener el botón que abre el modal (ahora usando el id "newEventButton")
-					var btn = document.getElementById("newEventButton");
-					// Obtener el elemento que cierra el modal
-					var span = document.getElementsByClassName("close")[0];
-					// Cuando el usuario haga clic en el botón, abre el modal
-					btn.onclick = function() {
-						modal.style.display = "block";
-					}
-					// Cuando el usuario haga clic en el botón de cerrar, cierra el modal
-					span.onclick = function() {
-						modal.style.display = "none";
-					}
-					// Cuando el usuario haga clic fuera del modal, también lo cierra
-					window.onclick = function(event) {
-						if (event.target == modal) {
-							modal.style.display = "none";
-						}
-					}
-					// Función para cerrar el modal desde otras partes si es necesario
-					function closeEventModal() {
-						modal.style.display = "none";
-					}
-				</script>
-			}
+			
 
 		</div>
 
@@ -206,7 +141,7 @@
 		<div class="review-container">
 			<div class="user-reviews-section">
 				<h2>Reseñas</h2>
-				<div class="users-reviews-container">
+				<div class="users-reviews-container @(Model.Project.IdProject != sessionProjectId ? "max-height-50" : "max-height-100")">
 					@if (Model.Project.Reviews != null && Model.Project.Reviews.Any())
 					{
 						foreach (var review in Model.Project.Reviews)
@@ -248,6 +183,78 @@
 			}
 		</div>
 	</div>
+
+	@if (sessionUserId == Model.Project.IdUsersAdmin)
+	{
+		<!-- Modal para crear un nuevo evento -->
+		<div id="eventModal" style="display: none;" class="modal">
+			<div class="modal-content">
+				<span class="close" onclick="closeEventModal()">×</span>
+				<h2>Crear Nuevo Evento</h2>
+				<form method="post" action="/Profile/CreateEvent">
+					<label for="eventTitle">Título del Evento:</label>
+					<input type="text" id="eventTitle" name="eventTitle" required>
+					<br />
+					<label for="eventDescription">Descripción:</label>
+					<textarea id="eventDescription" name="eventDescription" required></textarea>
+					<br />
+					<label for="eventDate">Fecha del Evento:</label>
+					<input type="date" id="eventDate" name="eventDate" required>
+					<br />
+					<label for="eventCapacity">Capacidad:</label>
+					<input type="number" id="eventCapacity" name="eventCapacity">
+					<br />
+					<!-- Ubicación -->
+					<label for="locationId">Ubicación del Evento:</label>
+					<select id="locationId" name="locationId" required>
+						<option value="">Selecciona una ubicación</option>
+						@if (Model.Locations != null && Model.Locations.Any())
+						{
+							foreach (var location in Model.Locations)
+							{
+								<option value="@location.IdLocation">@location.NameLocation</option>
+							}
+						}
+						else
+						{
+							<p>No hay ubicaciones disponibles.</p>
+						}
+					</select>
+					<br />
+					<button type="submit" class="btn btn-outline-light btn-sm" style="background-color: var(--primary-color) !important; width: 150px !important;">
+						Crear Evento
+					</button>
+				</form>
+			</div>
+		</div>
+
+		<script>
+			// Obtener el modal
+			var modal = document.getElementById("eventModal");
+			// Obtener el botón que abre el modal (ahora usando el id "newEventButton")
+			var btn = document.getElementById("newEventButton");
+			// Obtener el elemento que cierra el modal
+			var span = document.getElementsByClassName("close")[0];
+			// Cuando el usuario haga clic en el botón, abre el modal
+			btn.onclick = function () {
+				modal.style.display = "flex";
+			}
+			// Cuando el usuario haga clic en el botón de cerrar, cierra el modal
+			span.onclick = function () {
+				modal.style.display = "none";
+			}
+			// Cuando el usuario haga clic fuera del modal, también lo cierra
+			window.onclick = function (event) {
+				if (event.target == modal) {
+					modal.style.display = "none";
+				}
+			}
+			// Función para cerrar el modal desde otras partes si es necesario
+			function closeEventModal() {
+				modal.style.display = "none";
+			}
+		</script>
+	}
 	<script>
     const favoriteButton = document.getElementById('favorite-button');
     const favoriteIcon = document.getElementById('favorite-icon');
