--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -188,7 +188,7 @@
 	{
 		<!-- Modal para crear un nuevo evento -->
 		<div id="eventModal" style="display: none;" class="modal">
-			<div class="modal-content">
+			<div class="modal-content" style="max-height: 80vh; overflow-y: auto;">
 				<span class="close" onclick="closeEventModal()">×</span>
 				<h2>Crear Nuevo Evento</h2>
 				<form method="post" action="/Profile/CreateEvent">
