--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -261,6 +261,12 @@ footer a:hover {
     background-color: #444;
     padding: 2rem;
     border-radius: 10px;
+    justify-content: flex-start; /* Mejor para contenido en scroll */
+    align-items: center;
+    padding: 1rem;
+    max-height: 100vh; /* Limita la altura al 80% de la ventana */
+    overflow-y: auto; /* Habilita scroll vertical si el contenido excede */
+    padding: 5%;
 }
 
     .main-content h2 {
@@ -298,11 +304,18 @@ footer a:hover {
     object-fit: cover; /* Ajusta la imagen al contenedor, recortando si es necesario */
 }
 
-/* Columna de eventos */
 .events-sidebar {
+    background-color: #444;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border-radius: 8px;
+    justify-content: flex-start; /* Mejor para contenido en scroll */
+    align-items: center;
+    padding: 1rem;
+    max-height: 100vh; /* Limita la altura al 80% de la ventana */
+    overflow-y: auto; /* Habilita scroll vertical si el contenido excede */
+    padding: 5%;
 }
 
 .event-card {
